--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 GOOGLE_API_KEY=AIzaSyD_FkmOu4OCjOlUSmRFKbJGJ5XXb8K4XAk
-GOOGLE_MAPS_API_KEY=AIzaSyBw-qx5DvirZDZSI2lMn0yHap5ipZYsvnY
+GOOGLE_MAPS_API_KEY=" "
 SECRET_KEY=86f1e1ba63a4e189509367d2270421eb31374d075cc58e51
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyBw-qx5DvirZDZSI2lMn0yHap5ipZYsvnY
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=" "
 
